fix(control): drive focused recovery from graph convergence